--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -6,6 +6,7 @@
     <title>@(ViewData["TieuDe"] != null ? ViewData["TieuDe"] : "") - LCTMoodle</title>
 
     <link href="/Content/styles/LCT/Khung.css" rel="stylesheet" />
+    <link href="/Content/styles/LCT/Form.css" rel="stylesheet" />
     <link href="/Content/styles/LCT/bootstrap.css" rel="stylesheet" />
     <link href="/Content/styles/LCT/icons.css" rel="stylesheet" />
     @RenderSection("Styles", false)
