--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewData["TieuDe"] = "TaoKhoaHoc";
+    ViewData["TieuDe"] = "Form mẫu";
     Layout = "~/Views/LCT/Khung.cshtml";
 }
 
 <article class="hop">
     <section class="tieu-de">
-        Tạo khóa học
+        Tên form
     </section>
     <form action="#" method="post" class="noi-dung lct-form">
         <article>
