--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -15,9 +15,16 @@
     <!-- Header -->
     <header>
         <section class="logo">
-            <a href="#" class="site-image"></a>
+            <a href="/TrangChu/Index" class="site-image"></a>
         </section>
-        <section class="top-header"></section>
+        <section class="top-header">
+            <article class="hop-nguoi-dung">
+                <ul>
+                    <li><a href="/NguoiDung/DangNhap">Đăng nhập</a></li>
+                    <li><a href="#">Đăng ký</a></li>
+                </ul>
+            </article>
+        </section>
         <section class="buffer-top-header"></section>
         <section class="bottom-header">
             <nav>
@@ -51,7 +58,7 @@
             </li>
             <li>
                 <a href="#">
-                    Khóa học của tôi
+                    @ViewData["TieuDe"]
                 </a>
             </li>
         </ul>
