Update Trang Dangnhap/Dangky

--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewData["TieuDe"] = "Đăng nhập";
+﻿@{
+    ViewData["TieuDe"] = "Đăng nhập";    
     Layout = "~/Views/LCT/Khung.cshtml";
 }
 
@@ -9,8 +8,8 @@
 
 <article class="hop-dang-nhap">
     <section class="tieu-de">
-        <h1>LCTMoodle</h1>
-        <h1>Mạng xã hội học tập của mọi người</h1>
+        <h1>LCT MOODLE</h1>
+        <h1>MẠNG XÃ HỘI HỌC TẬP CỦA MỌI NGƯỜI</h1>
     </section>
     <section class="noi-dung">
         <form class="lct-form" action="#" method="post">
