--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -2,7 +2,9 @@
     ViewData["TieuDe"] = "Form mẫu";
     Layout = "~/Views/LCT/Khung.cshtml";
 }
-
+@section Styles {
+    <link rel="stylesheet" type="text/css" href="/Content/styles/LCT/Form.css" />
+}
 @section Scripts {
     <script src="/Content/scripts/LCT/Form.js"></script>
 }
