Update trang NguoiDung

--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -36,7 +36,7 @@
                         <li><a href="#"><i class="pe-7s-global"></i></a></li>
                         <li>
                             <a href="#" class="toggle-target" data-toggle-target="hop-dieu-khien">
-                                <img src="~/Content/images/user-avatar.jpg" />
+                                <img src="/Content/images/user-avatar.jpg" />
                                 <span>@Session["NguoiDung"]</span>
                             </a>
                             <div class="hop-dieu-khien" data-toggle="hop-dieu-khien" hidden>
